# ai-agentic-mcpscan

./: .gitignore  .gitmessage  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  mcpscan.yml  pr-title.yml  release-please.yml  release.yml  sbom.yml
docs/: ARCHITECTURE.md  BACKLOG.md  BACKLOG_REVIEW.md  DECISIONS.md  DEVSECOPS.md  LAN_OPERATOR_GUIDE.md  RELEASING.md  SECURITY_SIGNOFF.md  SPEC.md  STATUS.md  STATUS.yaml  index.html
docs/dogfood/: NETWORK_LAB.md  TRIAGE_TEMPLATE.md
docs/proposals/: LAN_SCANNING.md  REAL_LAB_DOGFOOD.md  VISION.md
lab/synthetic/: docker-compose.yml
src/mcpscan/: __init__.py  cli.py  domain.py  engine.py  fix.py  io_safe.py  redaction.py  scoring.py
src/mcpscan/adapters/: __init__.py  base.py  claude.py  cline.py  continue_.py  cursor.py  jsonc.py  paths.py  vscode.py  windsurf.py  zed.py
src/mcpscan/atlas/: __init__.py  model.py  render.py
src/mcpscan/checks/: __init__.py  exposure.py  pinning.py  secrets.py  tool_scope.py
src/mcpscan/discovery/: __init__.py  probe.py  sockets.py
src/mcpscan/drift/: __init__.py  baseline.py  diff.py  model.py  render.py  snapshot.py
src/mcpscan/enrichment/: __init__.py  osv.py
src/mcpscan/inventory/: __init__.py  classify.py  collect.py  fingerprint.py  model.py  render.py
src/mcpscan/lan/: __init__.py  audit.py  budgets.py  manifest.py  policy.py  probe.py  runner.py  sanitize.py  scope.py  verify.py
src/mcpscan/report/: __init__.py  common.py  html.py  json_report.py  sarif.py  terminal.py  writer.py
src/mcpscan/trust/: __init__.py  analyze.py  collect.py  model.py  render.py
tests/: conftest.py  test_adapters_cline.py  test_adapters_continue.py  test_adapters_cursor.py  test_adapters_vscode.py  test_adapters_windsurf.py  test_adapters_zed.py  test_atlas.py  test_checks_other.py  test_checks_secrets.py  test_cli.py  test_dogfood.py  test_dogfood_anonymize.py  test_domain.py  test_drift.py  test_e2e_dogfood.py  test_engine.py  test_enrichment.py  test_fix.py  test_inventory.py  test_io_safe.py  test_jsonc.py  test_lan.py  test_lan_runner.py  test_paths.py  test_probe.py  test_redaction.py  test_report.py  test_report_sarif.py  test_self_scan.py  test_sockets.py  test_status_sync.py  test_trust.py  test_version_sync.py
tools/dogfood/: README.md  anonymize.py  corpus.py  run.py
