[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agentic-mcpscan"
version = "0.1.0"
description = "Local-first, offline-by-default security posture scanner for MCP / local-agent setups."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "IRsoctierDT" }]
keywords = ["mcp", "security", "scanner", "posture", "agent", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

# Runtime deps are intentionally minimal and will be PINNED as the build lands.
# psutil powers socket/process enumeration (the 0.0.0.0-exposure check).
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pyyaml",          # dev-only: parses docs/STATUS.yaml in the status-sync test
    "ruff",
    "mypy",
    "types-psutil",
    "bandit",
    "pip-audit",
    "build",
]

[project.urls]
Homepage = "https://github.com/IRsoctierDT/ai-agentic-mcpscan"
Repository = "https://github.com/IRsoctierDT/ai-agentic-mcpscan"
Issues = "https://github.com/IRsoctierDT/ai-agentic-mcpscan/issues"

[project.scripts]
mcpscan = "mcpscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpscan"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["mcpscan"]

[tool.coverage.report]
# Floor below the current ~98% so coverage can't silently regress, with headroom
# for OS-specific branches that only execute on one leg of the CI matrix.
fail_under = 90
show_missing = true
