[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agentic-mcpscan"
version = "0.10.0"
description = "Local-first, offline-by-default security posture scanner for MCP / local-agent setups."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Ivan Rozenblad", email = "irozenblad@icloud.com" }]
keywords = ["mcp", "security", "scanner", "posture", "agent", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

# Runtime deps are intentionally minimal and will be PINNED as the build lands.
# psutil powers socket/process enumeration (the 0.0.0.0-exposure check).
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
# Optional feature extras — the base install stays stdlib-only (+ psutil).
# `crypto`: library-based Ed25519 verification of LAN manifests (an alternative
# to the default, dependency-free `ssh` scheme).
crypto = ["cryptography>=41"]
# `yaml`: parse Continue's YAML config so the Continue host adapter can audit it.
yaml = ["pyyaml>=6"]
dev = [
    "pytest",
    "pytest-cov",
    "pyyaml",          # dev-only: parses docs/STATUS.yaml in the status-sync test
    "cryptography>=41",  # dev: exercise the `crypto` extra (Ed25519) in CI
    "ruff",
    "mypy",
    "types-psutil",
    "bandit",
    "pip-audit",
    "build",
]

[project.urls]
Homepage = "https://github.com/IRsoctierDT/ai-agentic-mcpscan"
Repository = "https://github.com/IRsoctierDT/ai-agentic-mcpscan"
Issues = "https://github.com/IRsoctierDT/ai-agentic-mcpscan/issues"

[project.scripts]
mcpscan = "mcpscan.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpscan"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

# Optional feature extras: imported lazily inside try/except. Don't fail the
# type check when their stubs/packages aren't present in the mypy environment.
[[tool.mypy.overrides]]
module = ["yaml", "cryptography.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"

# Coverage gate (T-404 / SPEC §14: "coverage gate met"). Branch-aware so a
# half-tested condition can't pass as covered. Applied to every coverage run,
# local and CI, from one source. Floor below the current ~98% so coverage can't
# silently regress, with headroom for OS-specific branches that only execute on
# one leg of the CI matrix.
[tool.coverage.run]
branch = true
source = ["mcpscan"]

[tool.coverage.report]
fail_under = 90
show_missing = true
